# 2d_generic_algo

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
data/tasks/: demo_extreme.txt  demo_large.txt  demo_medium.txt  demo_small.txt
docs/: README.md  optimization-pipeline.md  task-format.md  ui-guide.md  variation-and-evolution.md
src/knapsack2d/: __init__.py  candidates.py  config.py  decoder.py  fitness.py  geometry.py  models.py  policies.py  task_builder.py  task_io.py
src/knapsack2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/knapsack2d/baseline/: __init__.py  exhaustive.py
src/knapsack2d/ga/: __init__.py  chromosome.py  config.py  crossover.py  history.py  individual.py  initializer.py  metrics.py  mutation.py  optimizer.py  representation.py  selection.py
src/knapsack2d/ui/: __init__.py  app.py  main_window.py  run_models.py
src/knapsack2d/utils/: __init__.py
tests/: test_candidates.py  test_chromosome.py  test_crossover.py  test_decoder_basic.py  test_decoder_overflow.py  test_decoder_virtual_blocks.py  test_exhaustive_search.py  test_fitness.py  test_generation_table_model.py  test_geometry.py  test_history_mapper.py  test_layout_scene.py  test_models.py  test_mutation.py  test_optimizer_smoke.py  test_population_study.py  test_selection.py  test_selection_sync.py  test_statistics_dialog.py  test_task_builder.py  test_task_io.py  test_ui_export.py  test_ui_playback.py
tests/fixtures/: task_duplicate_id.txt  task_negative_size.txt  task_valid_01.txt  task_with_rotation.txt
(+18 files in other folders)
