[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knapsack2d"
version = "0.1.0"
description = "Educational project for constrained 0/1 2D knapsack"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ui = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]